--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,52 +1,32 @@
 @import "_variables.scss";
 
 .footer {
-    padding:20px 20px;
-    background-color:$dark-blue;
+    padding:40px 40px;
+    background-color:$white;
+    background-image:url("../img/circle-bg-pattern.png");
+    background-repeat: repeat;
+    text-align:center;
     
     .logo {
         margin-bottom:10px;
         vertical-align:middle;
-        background-image:url("../images/logo.png");
-        background-position:-1px 0px;
+        background-image:url("../img/logo.png");
+        background-position:-67px 0px;
         width:70px;
         height:70px;
         display:inline-block;
-    
-        &:hover, &:focus {
-            background-position:-1px -71px;
-        }
+        cursor: pointer;
     }
-
-    .underline-wrapper {
-        width: 280px;
-        margin: 0 auto;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        
-        @media #{$md} {
-            width: 380px;
-        }
-        
-        .orange-underline {
-            border-bottom:2px solid $orange;
-        }
-
-        .circle {
-            width: 10px;
-            height: 10px;
-            background: $orange;
-            -moz-border-radius: 50px;
-            -webkit-border-radius: 50px;
-            border-radius: 50px;
-            margin:0 auto;
-            margin-top:-5px;
-        }
+    
+    .orange-underline {
+        border-bottom:1px solid $orange;
+        width:25%;
+        margin:0 auto;
     }
     
     ul.nav {
-        display:inline-block;
-        margin-bottom:20px;
+        display:block;
+        margin:15px 15px;
 
         li {
             list-style-type:none;
@@ -58,7 +38,7 @@
             }
             
             a {
-                color:$white;
+                color:#1C1D21;
                 font-size:14px;
                 text-transform: uppercase;
                 font-weight:bold;
@@ -74,58 +54,42 @@
         }
     }
     
-    .social-media-wrapper {
-        ul.social-media {
-            li {
+    ul.social-media {
+        margin-top:6px;
+        margin-right:20px;
+
+        li {
+            display:inline-block;
+
+            a.behance, a.linkedin, a.vimeo, a.youtube {
+                height:26px;
                 display:inline-block;
+                background-image:url("../img/social-media-icons-black.png");
+                background-repeat: no-repeat;
+                cursor: pointer;
 
-                a.behance, a.linkedin, a.vimeo, a.youtube {
-                    width:36px;
-                    height:36px;
-                    display:inline-block;
-                    background-image:url("../images/social-media-icons.png");
-                    background-repeat: no-repeat;
+            }
+            a.behance {
+                background-position:0px -0px;
+                margin-right:10px;
+                width:41px;
+            }
 
-                    &:hover, &:focus {
-                        background-image:url("../images/social-media-icons.png");
-                        background-repeat: no-repeat;
-                    }
-                    
-                }
-                a.behance {
-                    background-position:-1px -0px;
-                    margin-right:10px;
+            a.linkedin {
+                background-position:-57px -0px;
+                margin-right:10px;
+                width:29px;
+            }
 
-                    &:hover, &:focus {
-                        background-position:-1px -38px;
-                    }
-                }
+            a.vimeo {
+                background-position:-101px -0px;
+                margin-right:10px;
+                width:31px;
+            }
 
-                a.linkedin {
-                    background-position:-46px -0px;
-                    margin-right:10px;
-
-                    &:hover, &:focus {
-                        background-position:-46px -38px;
-                    }
-                }
-
-                a.vimeo {
-                    background-position:-93px -0px;
-                    margin-right:10px;
-
-                    &:hover, &:focus {
-                        background-position:-93px -38px;
-                    }
-                }
-
-                a.youtube {
-                    background-position:-141px -0px;
-
-                    &:hover, &:focus {
-                        background-position:-141px -38px;
-                    }
-                }
+            a.youtube {
+                background-position:-143px -0px;
+                width:38px;
             }
         }
     }
@@ -133,7 +97,7 @@
     p.copyright {
         font-size:12px;
         line-height:16px;
-        color:$white;
-        margin-bottom:20px;
+        color:#1C1D21;
+        margin:15px 15px;
     }
 }
