--- a/css/_header.scss
+++ b/css/_header.scss
@@ -3,112 +3,94 @@
 .header {
     background-color:$dark-blue;
     padding:30px 0px;
-    
-    .logo-nav-wrapper {       
-    
-        .logo {
-            margin-left:20px;
-            vertical-align:middle;
-            background-image:url("../img/logo-white.png");
-            width:73px;
-            height:69px;
-            display:block;
-            margin:0 auto;
-            margin-bottom:10px;
+    margin-left:30px;
 
-            &:hover, &:focus {
-                background-position:-1px -71px;
-            }
-            
-            @media #{$md} {
-                display:inline-block;
-                margin-bottom:0px;
-                margin-left:20px;
-            }
-        }
+    .logo {
+        margin-left:20px;
+        vertical-align:middle;
+        background-image:url("../img/logo.png");
+        width:72px;
+        height:69px;
+        display:inline-block;
+        margin:0 auto;
+        margin-bottom:10px;
+        cursor: pointer;
 
-        ul.nav {
+        @media #{$md} {
             display:inline-block;
+            margin-bottom:0px;
+            margin-left:20px;
+        }
+    }
 
-            li {
-                list-style-type:none;
-                display:inline-block;
-                padding:10px;
-                a {
-                    color:$white;
-                    font-size:16px;
-                    text-transform: uppercase;
-                    text-decoration:none;
-                    padding-bottom:2px;
-                    font-family: $armino;
-                    letter-spacing:0.05em;
+    ul.nav {
+        display:inline-block;
+        margin-left:10px;
 
-                    &:hover, &:focus, &.active {
-                        border-bottom:2px solid $orange;
-                    }
+        li {
+            list-style-type:none;
+            display:inline-block;
+            padding:10px;
+            
+            a {
+                color:$white;
+                font-size:16px;
+                text-transform: uppercase;
+                text-decoration:none;
+                padding-top:2px;
+                font-family: $armino;
+                letter-spacing:0.05em;
+                cursor: pointer;
+
+                &:hover, &:focus, &.active {
+                    border-top:2px solid $orange;
                 }
             }
         }
     }
-    
-    .social-media-wrapper {
+
+    ul.social-media {
+        margin-top:6px;
+        margin-right:30px;
         text-align:right;
-    
-        ul.social-media {
-            margin-top:6px;
-            margin-right:20px;
 
-            li {
+        li {
+            display:inline-block;
+
+            a.behance, a.linkedin, a.vimeo, a.youtube {
+                height:26px;
                 display:inline-block;
+                background-image:url("../img/social-media-icons-white.png");
+                background-repeat: no-repeat;
+                cursor: pointer;
 
-                a.behance, a.linkedin, a.vimeo, a.youtube {
-                    width:36px;
-                    height:36px;
-                    display:inline-block;
-                    background-image:url("../images/social-media-icons.png");
-                    background-repeat: no-repeat;
+            }
+            a.behance {
+                background-position:0px -0px;
+                margin-right:10px;
+                width:41px;
+            }
 
-                    &:hover, &:focus {
-                        background-image:url("../images/social-media-icons.png");
-                        background-repeat: no-repeat;
-                    }
-                    
-                }
-                a.behance {
-                    background-position:-1px -0px;
-                    margin-right:10px;
+            a.linkedin {
+                background-position:-57px -0px;
+                margin-right:10px;
+                width:29px;
+            }
 
-                    &:hover, &:focus {
-                        background-position:-1px -38px;
-                    }
-                }
+            a.vimeo {
+                background-position:-101px -0px;
+                margin-right:10px;
+                width:31px;
+            }
 
-                a.linkedin {
-                    background-position:-46px -0px;
-                    margin-right:10px;
-
-                    &:hover, &:focus {
-                        background-position:-46px -38px;
-                    }
-                }
-
-                a.vimeo {
-                    background-position:-93px -0px;
-                    margin-right:10px;
-
-                    &:hover, &:focus {
-                        background-position:-93px -38px;
-                    }
-                }
-
-                a.youtube {
-                    background-position:-141px -0px;
-
-                    &:hover, &:focus {
-                        background-position:-141px -38px;
-                    }
-                }
+            a.youtube {
+                background-position:-143px -0px;
+                width:38px;
             }
         }
+    }
+    
+    .banner {
+        padding:70px 67px;
     }
 }
