Updates and mobile menu
Added Bootstrap plug-ins for mobile menu.

--- a/css/_common.scss
+++ b/css/_common.scss
@@ -125,6 +125,11 @@ p {
     margin-bottom:10px;
 }
 
+.center-content {
+    justify-content: center;
+    align-items: center;
+}
+
 
 /*lightbox styles*/
 
