--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,21 +2,25 @@
 
 .header {
     background-color:$dark-blue;
-    padding:30px 0px;
-    margin-left:30px;
+    padding-top:50px;
+    padding-bottom:20px;
+    
+    @media #{$md} {
+        padding-top:50px;
+        padding-bottom:30px;
+        margin-left:20px;
+    }
     
     .nav-container {
         justify-content: space-between;
         align-items:center;
         
         a.logo {
-            margin-left:20px;
             vertical-align:middle;
             background-image:url("../img/logo.png");
             width:72px;
             height:69px;
             display:block;
-            margin:0 auto;
             margin-bottom:10px;
             cursor: pointer;
 
@@ -35,8 +39,8 @@
                 color:$white;
                 width:50px;
                 position:absolute;
-                top: -50px;
-                right: 10px;
+                top: 15px;
+                right: 15px;
             }
         }
         
@@ -47,15 +51,23 @@
                 text-align:right;
                 background-color:#343942;
                 width:220px;
-                padding:20px;
+                padding:60px 20px;
                 position: absolute;
-                top: -50px;
-                right: 0px;
+                top: -99px;
+                right: -15px;
                 height: 100vh;
                 z-index:1000;
                 -webkit-transition: all 0.2s ease-in-out;
                 -moz-transition: all 0.2s ease-in-out;
                 transition: all 0.2s ease-in-out;
+            }
+            
+            .close-button {
+                color:$white;
+                font-size: 50px;
+                position: absolute;
+                top: 0px;
+                right: 5px;
             }
         }
         
@@ -66,7 +78,7 @@
             display:block;
             width:100%;
 
-            @media #{$md} {
+            @media #{$sm} {
                 display:inline-block;
                 margin-left:10px;
                 width:auto;
@@ -97,7 +109,7 @@
                         color:$orange;
 
                         @media #{$md} {
-                            color:$whit;;
+                            color:$white;
                             border-top:2px solid $orange;
                         }
                     }
@@ -112,8 +124,7 @@
             width:100%;
 
             @media #{$md} {
-                margin-top:6px;
-                margin-right:30px;
+                margin-right:40px;
                 text-align:right;
             }
 
@@ -168,6 +179,10 @@
     }
     
     .banner {
-        padding:70px 67px;
+        padding:20px;
+        
+        @media #{$md} {
+            padding:70px 67px;
+        }
     }
 }
