--- a/css/_home.scss
+++ b/css/_home.scss
@@ -1,7 +1,12 @@
 @import "_variables.scss";
 
 .home {
-    .web-ui-illustration {
+    .illustration {
         margin:0 auto;
+        margin-top:30px;
+        
+        @media #{$md} {
+            margin-top:0px;
+        }
     }
 }
