--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -9,9 +9,10 @@ $orange:#f26414;
 
 /*media queries*/
 $xs-only:only screen and (max-width: 554px);
+$sm-down:only screen and (max-width: 767x);
 $sm:only screen and (min-width: 767px);
-$md:only screen and (min-width: 991px);
-$lg:only screen and (min-width: 1199px);
+$md:only screen and (min-width: 768px);
+$lg:only screen and (min-width: 992px);
 
 /*Google font*/
 $armino:'Arimo', Arial, Helvetica sans-serif;
