--- a/css/_common.scss
+++ b/css/_common.scss
@@ -217,19 +217,42 @@ p {
 }
 
 /*Responsive video*/
-.video-wrapper {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    padding-top: 25px;
-    height: 0;
+//.video-wrapper {
+//    position: relative;
+//    padding-bottom: 56.25%; /* 16:9 */
+//    padding-top: 25px;
+//    height: 0;
+//
+//    iframe {
+//        position: absolute;
+//        top: 0;
+//        left: 0;
+//        right: 0;
+//        width: 70%;
+//        height: 70%;
+//        margin: 0 auto;
+//    }
+//}
 
+.video-wrapper {
+    width:100%;
+    height:100%;
+    margin:0 auto;
+    background:#CCC;
+    
+    .video-inner-wrapper {
+        position:relative;
+    }
+    .ratio {
+        display:block;
+        width:100%;
+        height:auto;
+    }
     iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        width: 70%;
-        height: 70%;
-        margin: 0 auto;
+        position:absolute;
+        top:0;
+        left:0;
+        width:100%; 
+        height:100%;
     }
 }
