--- a/css/styles.css
+++ b/css/styles.css
@@ -290,22 +290,27 @@ p {
   display: block; }
 
 /*Responsive video*/
-/* line 220, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_common.scss */
+/* line 237, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_common.scss */
 .video-wrapper {
-  position: relative;
-  padding-bottom: 56.25%;
-  /* 16:9 */
-  padding-top: 25px;
-  height: 0; }
-  /* line 226, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_common.scss */
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background: #CCC; }
+  /* line 243, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_common.scss */
+  .video-wrapper .video-inner-wrapper {
+    position: relative; }
+  /* line 246, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_common.scss */
+  .video-wrapper .ratio {
+    display: block;
+    width: 100%;
+    height: auto; }
+  /* line 251, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_common.scss */
   .video-wrapper iframe {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    width: 70%;
-    height: 70%;
-    margin: 0 auto; }
+    width: 100%;
+    height: 100%; }
 
 /*colours*/
 /*media queries*/
@@ -594,6 +599,18 @@ p {
 /*media queries*/
 /*Google font*/
 /* line 4, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+.portfolio a.toggle-link {
+  font-size: 18px;
+  color: #f26414;
+  padding-right: 5px; }
+  /* line 9, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+  .portfolio a.toggle-link.closed span:before {
+    content: "Closed"; }
+  /* line 13, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+  .portfolio a.toggle-link.open span:before {
+    content: "Open"; }
+
+/* line 18, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
 .portfolio a.button {
   text-transform: uppercase;
   display: inline-block;
@@ -605,19 +622,19 @@ p {
   -wekbit-transition: all 0.3s ease;
   -moz-transition: all 0.3s ease;
   transition: all 0.3s ease; }
-  /* line 16, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+  /* line 30, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
   .portfolio a.button.orange {
     border: 2px solid #f26414;
     color: #f26414; }
-    /* line 20, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+    /* line 34, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
     .portfolio a.button.orange:hover, .portfolio a.button.orange:focus {
       color: #ffffff;
       background-color: #f26414; }
-      /* line 24, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+      /* line 38, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
       .portfolio a.button.orange:hover .video, .portfolio a.button.orange:focus .video {
         background-position: -39px -27px; }
 
-/* line 31, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+/* line 45, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
 .portfolio .category-icon {
   background-image: url("../img/category-icons.png");
   display: inline-block;
@@ -626,12 +643,41 @@ p {
   -wekbit-transition: background-image 0.3s ease-in-out;
   -moz-transition: background-image 0.3s ease-in-out;
   transition: background-image 0.3s ease-in-out; }
-  /* line 40, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+  /* line 54, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
   .portfolio .category-icon.video {
     width: 24px;
     height: 24px;
     background-position: -39px 0px;
     margin-top: -5px; }
+
+/* line 62, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+.portfolio .more-content {
+  margin-top: 50px;
+  margin-bottom: 20px; }
+
+/* line 67, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+.portfolio .orange-border {
+  margin-top: 30px;
+  border-top: 2px solid #f26414;
+  height: 4px; }
+
+/* line 73, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+.portfolio .close-button {
+  color: #f26414;
+  font-size: 50px;
+  -wekbit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  transition: all 0.2s ease; }
+  /* line 80, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+  .portfolio .close-button:hover, .portfolio .close-button:focus {
+    color: #00AAB2; }
+
+/* line 85, /Users/Amanda/self_promotion_material/branding/portfolio-website/portfolio-website/css/_portfolio.scss */
+.portfolio .portfolio-content {
+  overflow: hidden;
+  -wekbit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  transition: all 0.2s ease; }
 
 /*colours*/
 /*media queries*/
